# opMoDAQ

./: .gitignore  CONTRIBUTING.rst  LICENSE.rst  Pipfile  README.rst  requirements.txt  setup.cfg  setup.py
opmodaq/: find_boards.py  opmodaq-gui  opmodaq-profile  opmodaq-srv  opmodaq_lab.ipynb
opmodaq/opmodaq/: __init__.py  _version.py  device.py  generators.py  parameters.py  signal.py
opmodaq/opmodaq/devices/: mcc.py  mcc_daq.py  mcc_daq_daqhats.py  mcc_daq_mcculw.py  mcc_daqhats.py  mcc_mccul.py  plot.py
opmodaq/opmodaq/modes/: signal_generator.py
