[metadata]
name = opmodaq
version = attr: src.VERSION
description = DAQ Monitoring, Control and Operation Modes
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst::
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = True
packages = find:

scripts =
    bin/opmodaq-gui.py
    bin/opmodaq-srv.py

install_requires =
    numpy
    requests
    importlib; python_version >= "3.2"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    src.subpackage1
    src.subpackage2

# [options.data_files]
#   /etc/my_package =
#       site.d/00_default.conf
#       host.d/00_default.conf
#   data = data/img/logo.png, data/svg/icon.svg
